implement cycle ordering for reorgs

--- a/notebooks/demos.ipynb
+++ b/notebooks/demos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,13 +31,13 @@
     "import seaborn as sns\n",
     "\n",
     "from src.decisions import get_ranks, propose_merge, propose_reorg\n",
-    "from src.utilities import pct_str_to_float, flag_pareto_optimal, compute_centrality\n",
+    "from src.utilities import parse_float, flag_pareto_optimal, compute_centrality\n",
     "#from src.visualizations import ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "23     2    Z    0.80   0.78  0.87"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,9 +303,9 @@
     "file_path = 'data/test_horses_1.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "df['health'] = df['health'].apply(pct_str_to_float)\n",
-    "df['speed'] = df['speed'].apply(pct_str_to_float)\n",
-    "df['jump'] = df['jump'].apply(pct_str_to_float)\n",
+    "df['health'] = df['health'].apply(parse_float)\n",
+    "df['speed'] = df['speed'].apply(parse_float)\n",
+    "df['jump'] = df['jump'].apply(parse_float)\n",
     "\n",
     "df1 = df.query('zone == 1').copy()\n",
     "df2 = df.query('zone == 2').copy()\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -436,21 +436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kill D and replace it with S\n",
-      "Kill E and replace it with T\n",
-      "Kill F and replace it with U\n",
-      "Kill K and replace it with V\n",
-      "Kill L and replace it with W\n",
-      "Kill M and replace it with X\n",
-      "Kill N and replace it with Y\n",
-      "Kill O and replace it with Z\n"
+      "['Kill D and replace it with S', 'Kill E and replace it with T', 'Kill F and replace it with U', 'Kill K and replace it with V', 'Kill L and replace it with W', 'Kill M and replace it with X', 'Kill N and replace it with Y', 'Kill O and replace it with Z']\n"
      ]
     }
    ],
@@ -463,29 +456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Move P to A\n",
-      "Move O to B\n",
-      "Move H to C\n",
-      "Move N to D\n",
-      "Move G to E\n",
-      "Move M to F\n",
-      "Move F to G\n",
-      "Move L to H\n",
-      "Move E to I\n",
-      "Move K to J\n",
-      "Move D to K\n",
-      "Move J to L\n",
-      "Move C to M\n",
-      "Move I to N\n",
-      "Move B to O\n",
-      "Move A to P\n"
+      "['Move I to C', 'Move C to D', 'Move D to F', 'Move F to J', 'Move J to E', 'Move E to H', 'Move H to N', 'Move N to M', 'Move M to K', 'Move K to G', 'Move G to L', 'Move L to I']\n"
      ]
     }
    ],
@@ -495,13 +473,6 @@
     "s = propose_reorg(df1['name'], df1['rank'])\n",
     "print(s)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
