better reorg instructions

--- a/notebooks/demos.ipynb
+++ b/notebooks/demos.ipynb
@@ -472,349 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zone</th>\n",
-       "      <th>name</th>\n",
-       "      <th>health</th>\n",
-       "      <th>speed</th>\n",
-       "      <th>jump</th>\n",
-       "      <th>rank</th>\n",
-       "      <th>keep</th>\n",
-       "      <th>main_zone</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>12</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>13</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>C</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.78</td>\n",
-       "      <td>15</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>17</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>E</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>19</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>21</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1</td>\n",
-       "      <td>G</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>9</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1</td>\n",
-       "      <td>H</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>10</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1</td>\n",
-       "      <td>I</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>14</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1</td>\n",
-       "      <td>J</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.78</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>16</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1</td>\n",
-       "      <td>K</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.77</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>18</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1</td>\n",
-       "      <td>L</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1</td>\n",
-       "      <td>M</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>22</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>23</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1</td>\n",
-       "      <td>O</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>24</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1</td>\n",
-       "      <td>P</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>11</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2</td>\n",
-       "      <td>S</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2</td>\n",
-       "      <td>U</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2</td>\n",
-       "      <td>V</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.82</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2</td>\n",
-       "      <td>W</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>0.84</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2</td>\n",
-       "      <td>X</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>0.86</td>\n",
-       "      <td>7</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.78</td>\n",
-       "      <td>0.87</td>\n",
-       "      <td>8</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    zone name  health  speed  jump  rank   keep  main_zone\n",
-       "0      1    A    0.80   0.80  0.80    12   True       True\n",
-       "1      1    B    0.81   0.81  0.79    13   True       True\n",
-       "2      1    C    0.80   0.82  0.78    15   True       True\n",
-       "3      1    D    0.80   0.83  0.77    17  False       True\n",
-       "4      1    E    0.80   0.84  0.76    19  False       True\n",
-       "5      1    F    0.80   0.85  0.75    21  False       True\n",
-       "6      1    G    0.80   0.86  0.74     9   True       True\n",
-       "7      1    H    0.80   0.87  0.73    10   True       True\n",
-       "8      1    I    0.80   0.79  0.81    14   True       True\n",
-       "9      1    J    0.80   0.78  0.82    16   True       True\n",
-       "10     1    K    0.80   0.77  0.83    18  False       True\n",
-       "11     1    L    0.80   0.76  0.84    20  False       True\n",
-       "12     1    M    0.80   0.75  0.85    22  False       True\n",
-       "13     1    N    0.80   0.74  0.86    23  False       True\n",
-       "14     1    O    0.80   0.73  0.87    24  False       True\n",
-       "15     1    P    0.80   0.72  0.88    11   True       True\n",
-       "16     2    S    0.80   0.85  0.80     5   True      False\n",
-       "17     2    T    0.80   0.84  0.81     3   True      False\n",
-       "18     2    U    0.80   0.83  0.82     1   True      False\n",
-       "19     2    V    0.80   0.82  0.83     2   True      False\n",
-       "20     2    W    0.80   0.81  0.84     4   True      False\n",
-       "21     2    X    0.80   0.80  0.85     6   True      False\n",
-       "22     2    Y    0.80   0.79  0.86     7   True      False\n",
-       "23     2    Z    0.80   0.78  0.87     8   True      False"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -836,20 +494,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Move I to C', 'Move C to D', 'Move D to F', 'Move F to J', 'Move J to E', 'Move E to H', 'Move H to N', 'Move N to M', 'Move M to K', 'Move K to G', 'Move G to L', 'Move L to I']\n"
+      "['Stash I', 'Move L to I', 'Move G to L', 'Move K to G', 'Move M to K', 'Move N to M', 'Move H to N', 'Move E to H', 'Move J to E', 'Move F to J', 'Move D to F', 'Move C to D', 'Move the stashed horse to C']\n"
      ]
     }
    ],
    "source": [
     "# generating reorg instructions\n",
     "df1['rank'] = get_ranks(df1[['speed', 'jump']], df1[['health']])\n",
+    "s = propose_reorg(df1['name'], df1['rank'])\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Swap A and B']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1['rank'] = [2, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]\n",
     "s = propose_reorg(df1['name'], df1['rank'])\n",
     "print(s)"
    ]
