clearer merge instructions

--- a/notebooks/demos.ipynb
+++ b/notebooks/demos.ipynb
@@ -479,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A: keep', 'B: keep', 'C: keep', 'D: kill', 'E: kill', 'F: kill', 'G: keep', 'H: keep', 'I: keep', 'J: keep', 'K: kill', 'L: kill', 'M: kill', 'N: kill', 'O: kill', 'P: keep', 'S: move to D', 'T: move to E', 'U: move to F', 'V: move to K', 'W: move to L', 'X: move to M', 'Y: move to N', 'Z: move to O']\n"
+      "['Kill: D, E, F, K, L, M, N, O', 'Move S to D', 'Move T to E', 'Move U to F', 'Move V to K', 'Move W to L', 'Move X to M', 'Move Y to N', 'Move Z to O']\n"
      ]
     }
    ],
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -514,14 +514,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Swap A and B']\n"
+      "['Swap A and B', '']\n"
      ]
     }
    ],
